--- a/src/scss/abstracts/_vars.scss
+++ b/src/scss/abstracts/_vars.scss
@@ -13,7 +13,7 @@ $backgroundOpacity: 0.85;
 $fwNormal: 400;
 $fwBold: 700;
 
-$min_vw: 320px;
-$max_vw: 2560px;
-$min_font: 12px;
-$max_font: 50px;
+$min_width: 370px;
+$max_width: 2080px;
+$min_font: 32px;
+$max_font: 65px;
