--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,1 +1,207 @@
+.main {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-top: 60px;
 
+    @include breakpoint-max(1200) {
+        flex-wrap: wrap;
+    }
+
+    @include breakpoint-max(600) {
+        flex-direction: column;
+    }
+}
+
+.main-content-left{
+    width: 100%;
+    margin-left: 30px;
+    position: relative;
+
+    &::before, &::after {
+        position: absolute;
+        width: 3px;
+        content: "";
+    }
+
+    &::before {
+        left: 0;
+        bottom: 0;
+        width: 3px;
+        background: #939393;
+        height: 95%;
+    }
+
+    &::after {
+        right: 0;
+        top: 0;
+        width: 30%;
+        background: #939393;
+        height: 3px;
+        @include breakpoint-max(600) {
+            width: 100%;
+        }
+    }
+
+    @include breakpoint-max(600) {
+        margin-left: 0;
+    }
+
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        max-width: 800px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-inline: 20px;
+    }
+
+    &__text {
+        margin-top: auto;
+    }
+
+    &__text-sub-title {
+        text-transform: uppercase;
+        font-size: 20px;
+        color: #939393;
+    }
+
+    &__text-main-title {
+        @include fluid-typo($min_width, $max_width, $min_font, $max_font);
+        font-weight: 800;
+        margin-bottom: 85px;
+    }
+
+    &__button {
+        background-color: #FF9700;
+        height: 75px;
+        max-width: 300px;
+        width: 100%;
+        font-size: 22px;
+        font-weight: 700;
+        padding: 24px 36px;
+        text-transform: lowercase;
+        letter-spacing: normal;
+
+        &::first-letter {
+            text-transform: capitalize;
+        }
+    }
+
+    &__boxes {
+        margin-top: auto;
+        display: grid;
+        grid-auto-flow: column;
+        grid-auto-columns: 1fr;
+        gap: 5px;
+
+        @include breakpoint-max(900) {
+            grid-auto-flow: row;
+            row-gap: 30px;
+            margin-block: 30px;
+        }
+    }
+
+    &__box {
+        background-color: #FBFBFB;
+        padding-top: 45px;
+        padding-inline: 25px;
+        padding-bottom: 25px;
+        height: max-content;
+        margin-top: auto;
+        display: flex;
+        flex-direction: column;
+
+        img {
+            margin-bottom: 15px;
+            width: fit-content;
+        }
+
+        &:nth-child(3n+1) {
+            border-top: 4px solid #DF0D25;
+        }
+
+        &:nth-child(3n+2) {
+            border-top: 4px solid #0071D8;
+        }
+
+        &:nth-child(3n+3) {
+            border-top: 4px solid #00D879;
+        }
+    }
+
+    &__box-title {
+        margin-bottom: 30px;
+        font-size: 24px;
+    }
+
+    &__box-text {
+        font-size: 16px;
+        margin-bottom: 36px;
+    }
+
+    &__box-link {
+        margin-left: auto;
+    }
+}
+
+.main-content-right{
+    width: 100%;
+
+    .carousel {
+        position: relative;
+
+        &__content {
+            position: absolute;
+            bottom: 20px;
+            left: 50px;
+            @include breakpoint-max(700) {
+                bottom: 40px;
+            }
+        }
+
+        &__desc{
+            color: #A4A4A4;
+            font-size: 16px;
+        }
+
+        &__title {
+            color: #ffffff;
+            font-size: 22px;
+        }
+
+        &__btns {
+            display: none;
+        }
+
+        &__dots {
+            position: absolute;
+            bottom: 20px;
+            right: 50px;
+            display: flex;
+            max-width: 320px;
+            gap: 10px;
+            width: 100%;
+            @include breakpoint-max(700) {
+                right: 50%;
+                transform: translateX(50%);
+            }
+        }
+
+        &__image {
+            width: 100%;
+        }
+
+        &__dot {
+            max-width: 100px;
+            width: 100%;
+            height: 4px;
+            background-color: #ffffff;
+
+            &.active {
+                background-color: #FF9700;
+            }
+        }
+    }
+}
