--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -156,9 +156,6 @@
             position: absolute;
             bottom: 20px;
             left: 50px;
-            @include breakpoint-max(700) {
-                bottom: 40px;
-            }
         }
 
         &__desc{
@@ -183,6 +180,8 @@
             max-width: 320px;
             gap: 10px;
             width: 100%;
+            z-index: 5;
+
             @include breakpoint-max(700) {
                 right: 50%;
                 transform: translateX(50%);
